[package]
name = "grpc-hub"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "signal", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
toml = "0.8"
hyper = { version = "0.14", features = ["server", "http1"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.14"

[build-dependencies]
tonic-build = "0.12"
